// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeElement do not add children 1`] = `
Object {
  "children": Array [],
  "id": ".......0",
}
`;

exports[`normalizeElement do not remove children 1`] = `
Object {
  "children": Array [],
  "id": ".......0",
}
`;

exports[`normalizeElement do not remove children 2`] = `
Object {
  "children": Array [
    "",
  ],
  "id": ".......1",
}
`;

exports[`normalizeElement do not remove children 3`] = `
Object {
  "children": Array [
    ".",
  ],
  "id": ".......2",
}
`;

exports[`normalizeElement merges adjacent texts 1`] = `
Object {
  "children": Array [
    "ab",
    Object {
      "children": Array [
        "abc",
        Object {
          "children": Array [
            "a",
            Object {
              "children": Array [],
              "id": ".......3",
            },
            "bc",
          ],
          "id": ".......2",
        },
      ],
      "id": ".......1",
    },
    "a",
    "",
    "b",
  ],
  "id": ".......0",
}
`;
